[package]
name = "dgp"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
toml = "0.8.12"
